# xps_app

./: README.md  pyproject.toml
.claude/: settings.local.json
examples/: c1s_config.json  c1s_example.csv
src/xpsanalysis/: __init__.py  app.py  background.py  cli.py  energy.py  fitting.py  identify.py  io.py  models.py  reference.py  report.py  synthetic.py  transmission.py
src/xpsanalysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xpsanalysis/formats/: __init__.py  csv_format.py  text_format.py  vamas.py
tests/: conftest.py  test_background.py  test_energy.py  test_fitting.py  test_identify.py  test_io.py  test_models.py  test_reference.py  test_synthetic.py
