[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpsanalysis"
version = "0.1.0"
description = "X-ray Photoelectron Spectroscopy (XPS) spectrum analysis: background subtraction, peak fitting, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "lmfit>=1.2",
    "matplotlib>=3.7",
    "typer>=0.9",
    "streamlit>=1.28",
    "jinja2>=3.1",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
xps = "xpsanalysis.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
